--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
 {
-  "name": "craft",
+  "name": "service_app",
   "version": "1.0.0",
-  "description": "",
+  "description": "All routes can be found under Routes folder respectively seperate by category.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/FarazAhmed603/FYP_Backend.git"
+    "url": "git+https://github.com/Shahswark/service_app.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/FarazAhmed603/FYP_Backend.git"
+    "url": "https://github.com/Shahswark/service_app/issues"
   },
-  "homepage": "https://github.com/FarazAhmed603/FYP_Backend.git#readme",
+  "homepage": "https://github.com/Shahswark/service_app#readme",
   "dependencies": {
     "axios": "^1.2.1",
     "bcryptjs": "^2.4.3",
@@ -28,6 +28,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.8.0",
     "nodemailer": "^6.8.0",
+    "nodemon": "^2.0.20",
     "otp-generator": "^4.0.0"
   }
 }
