--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "All routes can be found under Routes folder respectively seperate by category.",
   "main": "index.js",
   "scripts": {
+    "app": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
