--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongo-gridfs": "^1.1.0",
     "mongoose": "^6.8.0",
+    "mongoose-gridfs": "^1.3.0",
     "nodemailer": "^6.8.0",
     "nodemon": "^2.0.20",
     "otp-generator": "^4.0.0"
