--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "fcm-node": "^1.6.1",
+    "firebase-admin": "^11.5.0",
     "jsonwebtoken": "^8.5.1",
     "mongo-gridfs": "^1.1.0",
     "mongoose": "^6.8.0",
